# NULLXESOS

./: .gitignore  Cargo.toml  README.md  STAGES.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
config/: frame.toml  theme.toml
crates/frame/: Cargo.toml
crates/frame/src/: config.rs  idle.rs  ipc_server.rs  main.rs  render.rs  runtime.rs  signals.rs  state.rs  workspace.rs  xwm.rs
crates/frame/src/backend/: drm.rs  mod.rs  winit.rs
crates/frame/src/handlers/: compositor.rs  data_device.rs  layer_shell.rs  mod.rs  output.rs  seat.rs  session_lock.rs  shm.rs  xdg_shell.rs
crates/frame/src/input/: keybind.rs  mod.rs  move_grab.rs
crates/frame/src/panel/: mod.rs
crates/frame/src/panel/modules/: battery.rs  clock.rs  mod.rs  network.rs  volume.rs  workspaces.rs
crates/frame/src/system/: login1.rs  mod.rs  nm.rs  upower.rs
crates/ipc/: Cargo.toml
crates/ipc/src/: client.rs  envelope.rs  lib.rs  path.rs  request.rs  response.rs
crates/launcher/: Cargo.toml
crates/launcher/src/: apps.rs  draw.rs  main.rs  search.rs  state.rs
crates/nx-greet/: Cargo.toml
crates/nx-greet/src/: ipc.rs  main.rs  render.rs  state.rs
crates/nx-lock/: Cargo.toml
crates/nx-lock/src/: main.rs  pam_auth.rs  render.rs  state.rs
crates/nx-notif/: Cargo.toml
crates/nx-notif/src/: dbus.rs  history.rs  main.rs  render.rs  surface.rs
crates/nx-settings/: Cargo.toml
crates/nx-settings/src/: conf.rs  main.rs  render.rs  state.rs
crates/slate/: Cargo.toml
crates/slate/src/: main.rs  render.rs  state.rs  term.rs
crates/theme/: Cargo.toml
crates/theme/src/: color.rs  config.rs  lib.rs  motion.rs  spacing.rs  text.rs  typography.rs
crates/theme/src/export/: greetd.rs  gtk.rs  icons.rs  mod.rs  plymouth.rs  qt.rs  systemd_boot.rs
crates/theme/tests/: export_determinism.rs
crates/wlcommon/: Cargo.toml
crates/wlcommon/src/: error.rs  fonts.rs  keymap.rs  lib.rs  shm.rs  surface.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: check_theme.rs  main.rs
docs/: architecture.md  releasing.md  smoke-checklist.md
docs/release-notes/: 0.1.0.md
iso/calamares/: PKGBUILD  settings.conf
iso/calamares/branding/nullxes/: branding.desc  show.qml
iso/calamares/modules/: bootloader.conf  displaymanager.conf  fstab.conf  initcpiocfg.conf  partition.conf  plymouthcfg.conf  services-systemd.conf  shellprocess.conf  users.conf
iso/profile/: packages.x86_64  pacman.conf  profiledef.sh
iso/profile/airootfs/etc/: hostname  os-release
iso/profile/airootfs/etc/skel/Desktop/: Install NULLXES.desktop
iso/profile/airootfs/root/: .zlogin
iso/profile/efiboot/loader/: loader.conf
iso/profile/efiboot/loader/entries/: nullxes.conf
iso/scripts/: build-iso.sh  smoke.expect  test-iso.sh
packaging/greetd/: config-autologin.toml  config.toml
packaging/loader/: loader.conf
packaging/loader/entries/: nullxes-fallback.conf  nullxes.conf
packaging/mkinitcpio/: mkinitcpio.conf  nullxes.preset
packaging/pam/: nullxes-lock
packaging/pkgbuilds/: README.md
packaging/pkgbuilds/nullxes-base/: PKGBUILD
packaging/pkgbuilds/nullxes-cursors/: PKGBUILD
packaging/pkgbuilds/nullxes-desktop/: PKGBUILD
packaging/pkgbuilds/nullxes-fonts/: PKGBUILD
packaging/pkgbuilds/nullxes-frame/: PKGBUILD
packaging/pkgbuilds/nullxes-greet/: PKGBUILD
packaging/pkgbuilds/nullxes-icons/: PKGBUILD
packaging/pkgbuilds/nullxes-keyring/: PKGBUILD  nullxes-keyring.install
packaging/pkgbuilds/nullxes-launcher/: PKGBUILD
packaging/pkgbuilds/nullxes-lock/: PKGBUILD
packaging/pkgbuilds/nullxes-notif/: PKGBUILD
packaging/pkgbuilds/nullxes-settings/: PKGBUILD
packaging/pkgbuilds/nullxes-slate/: PKGBUILD
packaging/pkgbuilds/nullxes-theme/: PKGBUILD
packaging/plymouth/: README.md  nullxes.plymouth  nullxes.script
packaging/polkit/: 50-nullxes-nm.rules
packaging/portal/: nullxes-portal-wlr.conf  nullxes-portals.conf  nullxes.portal
packaging/security/: 49-nullxes-rt.conf
packaging/sessions/: nullxes.desktop
packaging/sysctl/: 99-nullxes.conf
packaging/systemd/user/: nullxes-frame.service  nullxes-notif.service  nullxes-portal.service
scripts/: deploy-droplet-arch.sh  droplet-full-iso-vnc.sh  get-fonts.sh  install-session.sh  run-dev.sh  setup-dev.sh  start-nullxes.sh
sessions/: nullxes.desktop
