[workspace]
resolver = "2"
members = [
    "crates/theme",
    "crates/wlcommon",
    "crates/ipc",
    "crates/frame",
    "crates/launcher",
    "crates/slate",
    "crates/nx-lock",
    "crates/nx-notif",
    "crates/nx-settings",
    "crates/nx-greet",
    "crates/xtask",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
authors      = ["NULLXES Systems Engineering"]
license      = "MIT"
rust-version = "1.75"
repository   = "https://github.com/nullxes/vendeta"

[workspace.dependencies]
# ── Internal crates ──────────────────────────────────────────────────────────
theme    = { path = "crates/theme" }
wlcommon = { path = "crates/wlcommon" }
ipc      = { path = "crates/ipc" }

# ── Serialization ────────────────────────────────────────────────────────────
serde      = { version = "1",   features = ["derive"] }
serde_json = "1"
toml       = "0.8"

# ── Async ────────────────────────────────────────────────────────────────────
tokio = { version = "1", features = [
    "rt-multi-thread", "macros", "net", "io-util",
    "sync", "signal", "time", "process",
] }
async-trait = "0.1"
futures-util = "0.3"

# ── Logging ──────────────────────────────────────────────────────────────────
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-journald   = "0.3"

# ── Errors ───────────────────────────────────────────────────────────────────
anyhow    = "1"
thiserror = "1"

# ── Wayland compositor (smithay) ─────────────────────────────────────────────
smithay = { version = "0.6", features = [
    "renderer_gl",
    "renderer_pixman",
    "backend_drm",
    "backend_libinput",
    "backend_udev",
    "backend_winit",
    "backend_session_libseat",
    "desktop",
    "wayland_frontend",
    "xwayland",
    "use_system_lib",
] }
smithay-drm-extras = "0.1"

# ── Wayland client ───────────────────────────────────────────────────────────
wayland-client        = "0.31"
wayland-protocols     = { version = "0.31", features = ["client", "staging", "unstable"] }
wayland-protocols-wlr = { version = "0.2",  features = ["client"] }

# ── 2-D rendering ────────────────────────────────────────────────────────────
fontdue   = "0.9"
image     = { version = "0.25", default-features = false, features = ["png"] }
tiny-skia = "0.11"

# ── Shared memory / system ──────────────────────────────────────────────────
memmap2 = "0.9"
libc    = "0.2"
nix     = { version = "0.27", features = ["fs", "ioctl", "process", "signal", "term", "user"] }
rustix  = { version = "0.38", features = ["fs", "process", "termios"] }

# ── Input / keymap ───────────────────────────────────────────────────────────
xkbcommon = "0.8"

# ── D-Bus ────────────────────────────────────────────────────────────────────
zbus = { version = "4", default-features = false, features = ["tokio"] }
zvariant = "4"

# ── PAM ──────────────────────────────────────────────────────────────────────
pam = "0.8"
pam-sys = "1"

# ── Terminal ─────────────────────────────────────────────────────────────────
alacritty_terminal = "0.21"

# ── PipeWire ─────────────────────────────────────────────────────────────────
pipewire = "0.8"

# ── greetd IPC ───────────────────────────────────────────────────────────────
greetd_ipc = "0.10"

# ── App entries / launcher ───────────────────────────────────────────────────
fuzzy-matcher             = "0.3"
freedesktop-desktop-entry = "0.5"
shlex                     = "1"

# ── Misc ─────────────────────────────────────────────────────────────────────
dirs-next = "2"
calloop   = { version = "0.13", features = ["executor"] }
fastrand  = "2"
once_cell = "1"
parking_lot = "0.12"

# ── Workspace lints (applied by each crate via `[lints.workspace = true]`) ──
[workspace.lints.clippy]
unwrap_used  = "deny"
expect_used  = "deny"
panic        = "deny"
todo         = "deny"
unimplemented = "deny"
dbg_macro    = "deny"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"

# ── Reproducible release builds ──────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
debug         = false
overflow-checks = false

[profile.release-debuginfo]
inherits = "release"
strip    = "none"
debug    = "line-tables-only"
