[package]
name        = "launcher"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NULLXES LAUNCHER — application launcher overlay (wlr-layer-shell client)."

[[bin]]
name = "nullxes-launcher"
path = "src/main.rs"

[dependencies]
theme       = { workspace = true, features = ["render"] }
wlcommon    = { workspace = true }
ipc         = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next   = { workspace = true }
libc        = { workspace = true }
nix         = { workspace = true }
rustix      = { workspace = true }

wayland-client          = { workspace = true }
wayland-protocols       = { workspace = true }
wayland-protocols-wlr   = { workspace = true }

xkbcommon                 = { workspace = true }
fuzzy-matcher             = { workspace = true }
freedesktop-desktop-entry = { workspace = true }
shlex                     = { workspace = true }

[lints]
workspace = true
