[package]
name        = "nx-greet"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NX-GREET — NULLXES greeter (greetd protocol over wayland xdg-shell)."

[[bin]]
name = "nullxes-greet"
path = "src/main.rs"

[dependencies]
theme       = { workspace = true, features = ["render"] }
wlcommon    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next   = { workspace = true }
libc        = { workspace = true }

wayland-client     = { workspace = true }
wayland-protocols  = { workspace = true }

xkbcommon          = { workspace = true }
greetd_ipc         = { workspace = true }
image              = { workspace = true }

[lints]
workspace = true
