[package]
name        = "nx-notif"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NX-NOTIF — NULLXES notification daemon (org.freedesktop.Notifications + wlr-layer-shell tosts)."

[[bin]]
name = "nullxes-notif"
path = "src/main.rs"

[dependencies]
theme       = { workspace = true, features = ["render"] }
wlcommon    = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next   = { workspace = true }
parking_lot = { workspace = true }
libc        = { workspace = true }
once_cell   = { workspace = true }

tokio                  = { workspace = true }
zbus                   = { workspace = true }
zvariant               = { workspace = true }

wayland-client         = { workspace = true }
wayland-protocols      = { workspace = true }
wayland-protocols-wlr  = { workspace = true }

[lints]
workspace = true
