[package]
name        = "nx-settings"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NX-SETTINGS — NULLXES configuration UI (xdg-shell client; backed by TOML files and Control IPC v1)."

[[bin]]
name = "nullxes-settings"
path = "src/main.rs"

[dependencies]
theme       = { workspace = true, features = ["render"] }
wlcommon    = { workspace = true }
ipc         = { workspace = true, features = ["client"] }
serde       = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next   = { workspace = true }
libc        = { workspace = true }

tokio                  = { workspace = true }
zbus                   = { workspace = true }

wayland-client     = { workspace = true }
wayland-protocols  = { workspace = true }

xkbcommon          = { workspace = true }

[lints]
workspace = true
