[package]
name        = "slate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "SLATE — NULLXES terminal emulator (xdg-shell client, alacritty_terminal engine)."

[[bin]]
name = "nullxes-slate"
path = "src/main.rs"

[dependencies]
theme       = { workspace = true, features = ["render"] }
wlcommon    = { workspace = true }
serde       = { workspace = true }
toml        = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
tracing-subscriber = { workspace = true }
dirs-next   = { workspace = true }
libc        = { workspace = true }
nix         = { workspace = true }
rustix      = { workspace = true }
parking_lot = { workspace = true }

wayland-client     = { workspace = true }
wayland-protocols  = { workspace = true }

xkbcommon          = { workspace = true }
alacritty_terminal = { workspace = true }

[lints]
workspace = true
