[package]
name        = "wlcommon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared wayland-client primitives for NULLXES userland (SHM double-buffer, layer-shell helpers, font discovery)."

[dependencies]
theme       = { workspace = true, features = ["render"] }
serde       = { workspace = true }
anyhow      = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
libc        = { workspace = true }
memmap2     = { workspace = true }
rustix      = { workspace = true }

wayland-client          = { workspace = true }
wayland-protocols       = { workspace = true }
wayland-protocols-wlr   = { workspace = true }

xkbcommon   = { workspace = true }

[lints]
workspace = true
