[package]
name        = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Repository automation (theme guard, ISO build helpers, CI shims)."

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap   = { version = "4", features = ["derive"] }

[lints]
workspace = true
